// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should create a Header in english 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="wrapper"
    >
      <h1>
        <a
          href="/"
        >
          Mortality in France
        </a>
      </h1>
      <ul
        class="menu"
      >
        <li
          class=""
        >
          <a
            href="/overview"
          >
            Overview
          </a>
        </li>
        <li
          class=""
        >
          <a
            href="/comparison"
          >
            Comparison
          </a>
        </li>
        <li
          class=""
        >
          <a
            href="/distribution"
          >
            Distribution
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should create a Header in french 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="wrapper"
    >
      <h1>
        <a
          href="/"
        >
          Mortalité en France
        </a>
      </h1>
      <ul
        class="menu"
      >
        <li
          class=""
        >
          <a
            href="/overview"
          >
            Vue d'Ensemble
          </a>
        </li>
        <li
          class=""
        >
          <a
            href="/comparison"
          >
            Comparaison
          </a>
        </li>
        <li
          class=""
        >
          <a
            href="/distribution"
          >
            Répartition
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
